# round-based-protocol-sgx

./: Cargo.toml
src/: lib.rs  sm.rs
src/containers/: broadcast.rs  center.rs  mod.rs  p2p.rs  push.rs  store_err.rs  traits.rs
src/dev/: mod.rs  simulation.rs
tests/: simulate_silly_protocol.rs
