[package]
name = "round-based"
version = "0.1.6"
edition = "2018"
authors = ["Denis Varlakov <dsurv@yandex.ru>"]
license = "GPL-3.0"
description = "Driver for round-based protocols"
repository = "https://github.com/ZenGo-X/round-based-protocol"
categories = ["asynchronous", "cryptography", "network-programming"]
keywords = ["round-based", "mpc", "protocol"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
thiserror = "1.0.23"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.14"

[dev-dependencies]
sha2 = "0.9.2"
rand = "0.8.1"
env_logger = "0.9.0"

[features]
default = ["dev"]
# Exposes utils useful for testing
dev = []

[[test]]
name = "simulate_silly_protocol"
