[package]
name = "round-based"
version = "0.1.6"
edition = "2018"
authors = ["Denis Varlakov <dsurv@yandex.ru>"]
license = "GPL-3.0"
description = "Driver for round-based protocols"
repository = "https://github.com/ZenGo-X/round-based-protocol"
categories = ["asynchronous", "cryptography", "network-programming"]
keywords = ["round-based", "mpc", "protocol"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
thiserror = { git = "https://github.com/mesalock-linux/thiserror-sgx.git" }
serde = { git = "https://github.com/mesalock-linux/serde-sgx.git", features = ["derive"] }
log = { git = "https://github.com/mesalock-linux/log-sgx" }
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[dev-dependencies]
sha2 = "0.9.2"
rand = "0.8.1"
env_logger = "0.9.0"

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]

[[test]]
name = "simulate_silly_protocol"
